Added route and documentation for the power pollers, too.  #1341
